dark mode fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4006,7 +4006,7 @@
 		}
 
 		.gallery .image {
-			background: #FFF;
+			background: #0e1011;
 			padding: 0.75rem;
 		}
 
